Improve Paged Item Switch